# asd_lab_2.3

./: CMakeLists.txt  README.md  X_routines.h  graph_create.h  graph_draw.h  main.c
src/: X_routines.h  consts_n_structures.h  graph_create.h  graph_draw.h  vec_math_lib.h
src/c files/: X_routines.c  graph_create.c  graph_draw.c  vec_math_lib.c
src/libs/: X_routines.c
